k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app-pod
spec:
  containers:
    - name: app-container
      image: ghcr.io/ycchen12/app
      ports:
        - containerPort: 3000
    - name: db
      image: mariadb
