k8s/svc-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-clusterip
spec:
  type: ClusterIP
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
