k8s/svc-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-clusterip
spec:
  type: ClusterIP
  selector:
    app: mariadb
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
